# UberDriver

./: .gitignore  CPU.ioc  README.md
1.UberDirver v1/: Schematic.b#1  Schematic.b#2  Schematic.b#3  Schematic.b#4  Schematic.b#6  Schematic.b#7  Schematic.b#9  Schematic.brd.break  Schematic.brd.long  Schematic.brd.long2  Schematic.s#3  Schematic.s#7  Schematic.s#8  eagle.epf
1.UberDirver v1/Gerber/: Schematic.dri  Schematic.gko  Schematic.plc  Schematic.pls  Schematic.sol  Schematic.stc
1.UberDirver v1/Schematic/: Schematic.sch  Schematic.sch.break
1.UberDirver v1/kolejny Gerber/: Schematic.cmp  Schematic.gpi
1.UberDirver v2 + Sensory v2/: BatteryController.ioc  Gerber.rar  Schematic.b##  Schematic.b#1  Schematic.b#2  Schematic.b#3  Schematic.b#4  Schematic.b#5  Schematic.b#6  Schematic.b#7  Schematic.b#8  Schematic.b#9  Schematic.brd.long3  Schematic.s#1  Schematic.s#4  Schematic.s#5  Schematic.s#6  Schematic.s#7  Schematic.s#8  Schematic.s#9  UberDriver_v1.ioc
1.UberDirver v2 + Sensory v2/CubeMX/: Sensory.ioc
1.UberDirver v2 + Sensory v2/Gerber/: Schematic.cmp  Schematic.drd  Schematic.plc  Schematic.sol  Schematic.sts  gerber_job.gbrjob
1.UberDirver v2 + Sensory v2/LM2596_5.0BuckPCB-master/: Power Supply.b##
1.UberDirver v2 + Sensory v2/Sam sterownik/: Schematic.b#1  Schematic.b#2  Schematic.b#3  Schematic.b#4  Schematic.b#5  Schematic.brd  Schematic.s#1  Schematic.sch
1.UberDirver v2 + Sensory v2/Sam sterownik/CubeMX/: CubeMX.ioc
1.UberDirver v2 + Sensory v2/Schematic/: Schematic.brd  Schematic.old.brd  Schematic.sch  Schematic.txt  eagle.epf
1.UberDirver v2 + Sensory v2/kolejny Gerber/: Schematic.stc
1.UberDirver v2.1 STM32F103/CubeMX/: UberDriver_v2.ioc
1.UberDirver v3 STM32F103/Schemat/: Schematic.b##  Schematic.b#1  Schematic.b#2  Schematic.b#3  Schematic.b#4  Schematic.b#5  Schematic.b#6  Schematic.b#7  Schematic.b#8  Schematic.b#9  Schematic.brd  Schematic.s#1  Schematic.s#2  Schematic.s#3  Schematic.s#4  Schematic.s#5  Schematic.s#6  Schematic.s#7  Schematic.s#8  Schematic.s#9  Schematic.sch
1.UberDirver v3 STM32G40/: Schematic.b#1  Schematic.b#2  Schematic.b#3  Schematic.b#4  Schematic.b#5  Schematic.b#6  Schematic.b#7  Schematic.b#8  Schematic.b#9  Schematic.s#1  Schematic.s#2  Schematic.s#3  Schematic.s#4  Schematic.s#5  Schematic.s#6  Schematic.s#7  Schematic.s#8  Schematic.s#9
1.UberDirver v3 STM32G40/CubeMX/: CubeMX.ioc
1.UberDirver v3 STM32G40/Schematic/: Schematic.brd  Schematic.sch
1.UberDirver v4 STM32F103/CubeMX/: UberDriver_v4.ioc
1.UberDirver v4 STM32F103/Gerber/: CAMOutputs.rar
1.UberDirver v4 STM32F103/Schemat/: Schematic.b##  Schematic.b#1  Schematic.b#2  Schematic.b#3  Schematic.b#4  Schematic.b#5  Schematic.b#6  Schematic.b#7  Schematic.b#8  Schematic.b#9  Schematic.brd  Schematic.s#1  Schematic.s#2  Schematic.s#3  Schematic.s#4  Schematic.s#5  Schematic.s#6  Schematic.s#7  Schematic.s#8  Schematic.s#9  Schematic.txt
1.UberDirver v4 STM32F103/Schematic/: Schematic.sch
1.UberDriver v3 STM32G431/Software/: .cproject  .mxproject  .project  STM32G431C6TX_FLASH.ld  Uber v3.LQFP48.ioc
ArduinoController/Controller/: Controller.ino
Lib/: Molex_2.lbr
Meas/: first.m  meas_1.eps  meas_2.eps  meas_3.eps  meas_4.eps  meas_5.eps  meas_6.eps  meas_alg_comp.m  meas_basic.m  meas_data.m  meas_prop_comp.m  meas_xx.eps  summary_1.eps  summary_2.eps  summary_3.eps
ProgSTM/UberDriver_v1/Inc/: main.h  (+1 more)
Program.old/bridgeV01/: bridgeV01.ino
Program.old/controllerV01/: controllerV01.ino
Program.old/sketch_oct12a/: sketch_oct12a.ino
Program/bridgeV01/: bridgeV01.ino
Program/controllerV02/: controllerV02.ino
Program/sketch_dec16a/: sketch_dec16a.ino
Simulations/Sinus/: 1.eps  2.eps  3.eps  4.eps  5.eps  6.eps  7.eps  8.eps  Model.slx  Model2.slx  Model2.slxc  SinTr.m  sinus.eps  svm.asv  svm.m  svm_1.eps  svm_2.eps  svm_3.eps  svm_4.eps  svm_5.eps  svm_6.eps  svm_gen.asv  svm_gen.m  tfm.m
Symulacje/Sinus/: Model.slxc
v1.0 STM32F103/Gerber/: Schematic.sts
v1.0 STM32F103/Schematic/: Schematic.brd
v2.1 STM32F103/Schematic/: Schematic.brd  Schematic.cam
v3.0 STM32F103/Uber v3 stm32f103/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F103TBUX_FLASH.ld  Uber_v3_stm32f103.ioc  Uber_v3_stm32f103.launch
v3.0 STM32F103/Uber v3 stm32f103/Core/Inc/: DRV8305.h  control.h  main.h  stm32f1xx_it.h
v3.0 STM32F103/Uber v3 stm32f103/Core/Src/: DRV8305.c  application.c  control.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
v3.0 STM32F103/Uber v3 stm32f103/Debug/: makefile
v3.0 STM32F103/Uber v3 stm32f103/Debug/Core/Src/: DRV8305.d  application.d  control.d  main.d  subdir.mk
v3.0 STM32F103/Uber v3 stm32f103/Debug/Core/Startup/: subdir.mk
v3.0 STM32F103/Uber v3 stm32f103/Debug/Drivers/STM32F1xx_HAL_Driver/Src/: subdir.mk
v3.0 STM32F103/Uber v3 stm32f103/cmake/: arm-none-eabi-gcc.cmake
(+495 files in other folders)
